# DemoMan

./: .gitignore  IsolatedKokoroProcessor.py  IsolatedKokoroProcessor_v2.py  IsolatedKokoroProcessor_v2.spec  IsolatedKokoroProcessor_v3.py  TestKDir.spec  main.py  pyproject.toml  wxSlides.py  wxSlides_v3.py
BOM/: 7100-3276Assembly Instruction Export Test_with import & Tools.xlsm  AFHeartTxt.pkl
test/kokoro_audio_render_test/: UVKokoroTester.ipynb  main.py  pyproject.toml  uv_kokoro_tester.py
